--- a/portfolio.css
+++ b/portfolio.css
@@ -81,6 +81,9 @@ h1{
     text-align: center;
     line-height: 20px;
 }
+.project-description p{
+    margin-top: 15px;
+}
 .project-img img{
     width: 100%;
     height: 100%;
